Wed Feb  6 17:32:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_VERSION_NAME), template/ruby.pc.in: add
	  substitution and define.

	* configure.in, version.c: parametric architecture name for paths.

	* configure.in (shvar_to_cpp): convert sh variable references
	  by replacing with string literal forms in cpp.

Wed Feb  6 17:05:26 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 4.0.0.rc.2

Mon Feb  4 02:22:49 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_process.rb (test_setsid): ensure to call
	  Process.wait(). Reported by George Koehler. Thanks.

Mon Feb  4 02:18:00 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_process.rb (test_setsid): skip when platform is
	  OpenBSD. Contributed from George Koehler.
	  [Bug #7789] [ruby-core:51889]

Wed Feb  6 13:35:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_method_entry_location, rb_{mod,obj}_method_location): new
	  functions to obtain source location of method definition.

	* vm_method.c (rb_obj_respond_to): show the location of old style
	  respond_to? method.

Wed Feb  6 13:03:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/security.rdoc: Add link to CVEs on ruby-lang.org/en/security

Wed Feb  6 12:49:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* NEWS: Add note about removal of CSV::load and CSV::dump from r39077

Wed Feb  6 05:57:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/racc/parser.rb: Hide copyright notice from Racc doc

Wed Feb  6 05:50:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/rubygems/*: Removed outdated documentation files
	* lib/rubygems/LICENSE.txt: Include license file
	* lib/rubygems.rb: Move Gem module documentation so rdoc can parse it
	  and link to LICENSE.txt
	* lib/rubygems/*: Hide useless documentation from Gem module rdoc

Wed Feb  6 03:45:19 2013  Zachary Scott  <zachary@zacharyscott.net>
