@@ -26,12 +26,15 @@ LIBS=@LIBS@
 DLDFLAGS=@DLDFLAGS@
 ruby=${bindir}/${RUBY_INSTALL_NAME}@EXEEXT@
 rubylibprefix=@rubylibprefix@
-rubylibdir=${rubylibprefix}/${ruby_version}
-vendordir=${rubylibprefix}/vendor_ruby
-sitedir=${rubylibprefix}/site_ruby
-rubyarchdir=${rubylibdir}/${arch}
-vendorarchdir=${vendordir}/${sitearch}
-sitearchdir=${sitedir}/${sitearch}
+rubyarchprefix=@rubyarchprefix@
+rubylibdir=@rubylibdir@
+vendordir=@vendordir@
+sitedir=@sitedir@
+vendorlibdir=@vendorlibdir@
+sitelibdir=@sitelibdir@
+rubyarchdir=@rubyarchdir@
+vendorarchdir=@vendorarchdir@
+sitearchdir=@sitearchdir@
 rubyhdrdir=@rubyhdrdir@
 vendorhdrdir=@vendorhdrdir@
 sitehdrdir=@sitehdrdir@
