@@ -308,7 +308,7 @@ libdir = CONFIG["libdir", true]
 archhdrdir = rubyhdrdir = CONFIG["rubyhdrdir", true]
 archhdrdir += "/" + CONFIG["arch", true]
 rubylibdir = CONFIG["rubylibdir", true]
-archlibdir = CONFIG["archdir", true]
+archlibdir = CONFIG["rubyarchdir", true]
 sitelibdir = CONFIG["sitelibdir"]
 sitearchlibdir = CONFIG["sitearchdir"]
 vendorlibdir = CONFIG["vendorlibdir"]
